# internal/auth/route.go
@@ -10,8 +10,9 @@ import (
 func RouteAuth(app fiber.Router, state *app.State, logger *slog.Logger) {
 	repo := NewRepository(state.DB, logger)
 	service := NewService(repo, logger)
-	handler := NewHandler(service, logger)
+	handler := NewHandler(service, state, logger)
 
 	auth := app.Group("/auth")
 	auth.Post("/register", handler.Register)
+	auth.Post("/login", handler.Login)
 }
